// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Opener меняет состояние через коллбеки -  открывается 1`] = `
<OpenerContent
  close={[Function]}
  isOpened={true}
  open={[Function]}
/>
`;

exports[`Opener меняет состояние через коллбеки -  открывается и закрывается 1`] = `
<OpenerContent
  close={[Function]}
  isOpened={false}
  open={[Function]}
/>
`;

exports[`Opener при первом рендере закрыт через isOpened=false 1`] = `
<OpenerContent
  close={[Function]}
  isOpened={false}
  open={[Function]}
/>
`;

exports[`Opener при первом рендере открыт через isOpened 1`] = `
<OpenerContent
  close={[Function]}
  isOpened={true}
  open={[Function]}
/>
`;

exports[`Opener при первом рендере по умолчанию закрыт 1`] = `
<OpenerContent
  close={[Function]}
  isOpened={false}
  open={[Function]}
/>
`;
